--- a/Project123-googleMap/app/src/main/res/values/strings.xml
+++ b/Project123-googleMap/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyApp</string>
+    <string name="app_name">타슈어때</string>
     <string name="facebook_app_key">2990696690941029</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
